# review_demo

./: .gitignore  Dockerfile  README.md  REVIEW.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
app/: main.py
docs/: review_cicd_config_introduce.md
fastapi_uv_demo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_main.py
