[project]
name = "fastapi-uv-demo"
version = "0.1.0"
description = "FastAPI demo with uv package manager"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "pytest>=9.0.2",
    "uvicorn>=0.24.0.post1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "httpx>=0.25.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# 关键：只包含 app，排除 data
[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["data*", "tests*"]